# pella-order-automation

./: .gitignore  README.md  create_output.py  index.html  package-lock.json  package.json  plan.md  pyproject.toml  tailwind.config.js  vite.config.js  windows_package.plan
.github/workflows/: windows-package.yml
frontend/src/: main.jsx  styles.css
frontend/src/components/ui/: button.jsx  progress.jsx  separator.jsx
launchers/: Open Modern Pella Order Automation.bat  Open Modern Pella Order Automation.command  Open Pella Order Automation.bat  Open Pella Order Automation.command  Open Tauri Pella Order Automation.bat  Open Tauri Pella Order Automation.command
reference-files/: Pella Automation Workbook.xlsm  Pella Completed Sheet Example 1.xlsm  Pella Completed Sheet Example 2.xlsm  Pella Completed Sheet Example 3.xlsm  Purchase Order Example 1.csv  Purchase Order Example 2.csv  Purchase Order Example 3.xls  Work Order Example 1 - Completed_output_test.xlsx  Work Order Example 1.xlsx  Work Order Example 2 - Completed_test.xlsx  Work Order Example 2.xlsx  Work Order Example 3.xls  example1_test.xlsx  example1_test2.xlsx
scripts/: build-generator.mjs  package-windows-portable.mjs  pella_generator_entry.py  tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/pella_order_automation/: __init__.py  cli.py  extractor.py  gui.py  models.py  po_parser.py  units.py  web_server.py  work_order_parser.py  workbook_writer.py
tests/: smoke_examples.py  test_parsers.py  test_units.py
